# Church-of-FEAR

./: Cargo.toml  README.md
.github/workflows/: eco-fairness-ci.yml
Church-of-FEAR/src/: main.rs
auto_church-devops/: Cargo.toml
auto_church/ecofairness_guardian/src/: lib.rs
church-of-fear-neuromorph-core/: Cargo.toml
church_of_fear_ledger/: Cargo.toml
church_of_fear_ledger/src/: ledger.rs  main.rs
crates/Church-of-FEAR/src/: config.rs  main.rs
crates/Church-of-FEAR/src/compliance/: eco_reg.rs  mod.rs
crates/Church-of-FEAR/src/ledger/: account.rs  deed_event.rs
crates/Church-of-FEAR/src/rpc/: types.rs
crates/Church-of-FEAR/src/sponsor/: grant.rs  recipient.rs
crates/Church-of-FEAR/src/token/: mint.rs  mod.rs  rewards.rs
crates/Church-of-FEAR/src/utils/: crypto.rs
crates/Church-of-FEAR/tests/: sponsor_tests.rs  token_tests.rs
crates/ac_aln_integration/src/: language_branch.rs  regex_branch.rs  system_branch.rs
crates/ac_aln_rt/src/: errors.rs  model.rs  session.rs
crates/ac_devops_api/: Cargo.toml
crates/ac_devops_api/src/: main.rs
crates/ac_git_orchestrator/src/: config.rs
crates/ac_identity_lineage/: Cargo.toml
crates/ac_identity_lineage/src/: lib.rs  transform.rs
crates/ac_observability/src/: health.rs  lib.rs  metric.rs
crates/ac_scheduler_runtime/: Cargo.toml
crates/ac_scheduler_runtime/src/: job.rs  lib.rs  queue.rs
crates/ac_topology_model/src/: branch.rs  policy.rs
crates/augmented-citizen-sovereignty-core/: Cargo.toml
crates/augmented-citizen-sovereignty-core/src/: lib.rs
crates/eco-fairness-guard/: Cargo.toml
crates/ecofairness-guard/src/: kernel.rs  lib.rs
crates/fear_spiderweb_ledger/src/: spiderweb.rs
crates/god_like_core/src/: lib.rs
crates/governance-core/src/: autonomy.rs
crates/identity/neuro_eco_manifest/: Cargo.toml
crates/identity/neuro_eco_manifest/src/: lib.rs
crates/io/: neuro_eco_manifest
crates/nanoswarm-biometric-metrology/: Cargo.toml
crates/nanoswarm-biometric-metrology/src/: main.rs
crates/nanoswarm-zone-planner/: Cargo.toml
crates/nanoswarm-zone-planner/src/: main.rs
crates/policyengine/src/: discipline_contribution.rs
crates/tsafe-cortex-gate/src/: auth.rs  guardians.rs
docs/: Node_Buckets.md  README.md
doctrine/: church-of-fear-neuromorph-evolution.md
examples/: log_good_deed.rs
policies/: eco-fairness.aln
policy/: DISCIPLINE-AS-CONTRIBUTION.aln  REVERSAL-FAIRNESS-DISCIPLINE.aln
policyengine/src/: reversalconditions.rs
qpudata/shards/: church-of-fear-neuromorph-eco-profile.aln  church-of-fear-neuromorph-evolution-budget.aln
src/: autonomic_fear_rail.rs  main.rs
src/ledger/: account.rs  deed_event.rs  mod.rs
src/token/: mint.rs
tests/: ledger_tests.rs
