[package]
name = "church_of_fear_ledger"
version = "0.1.0"
edition = "2021"
description = "Moral Ledger for Church-of-FEAR: Rights-respecting governance for good deeds and ecological help."
authors = ["Neuromorph-GOD <auto_church@tree-of-life.org>"]
license = "MIT"
repository = "https://github.com/Doctor0Evil/Church-of-FEAR"
keywords = ["ledger", "governance", "ecology", "ethics", "blockchain-like"]
categories = ["simulation", "cryptography"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4", "fast-rng"] }
chrono = "0.4"
thiserror = "1.0"

[dev-dependencies]
rand = "0.8"

[workspace]
members = [
    "crates/identity/neuro_eco_manifest",
    # other crates…
]
