[package]
name = "ac_devops_api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
warp.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ac_git_orchestrator = { path = "../ac_git_orchestrator" }
ac_aln_integration = { path = "../ac_aln_integration" }
