[package]
name = "eco-fairness-guard"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
once_cell = "1.19"
dashmap = "6.0"
parking_lot = "0.12"
tracing = "0.1"

rohmodel = { path = "../rohmodel" }
tsafe    = { path = "../tsafe" }
vkernel  = { path = "../vkernel" }
